--- a/JAVA/AndroidCommonTech/app/src/main/res/values/colors.xml
+++ b/JAVA/AndroidCommonTech/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--优先使用@android:color/下的系统预定义的颜色-->
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
